New section on notebook

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -525,6 +525,17 @@
     "\n",
     "visualize_ent(doc)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. What can we do with this?\n",
+    "\n",
+    "- Only show certain parts of the text (sections)\n",
+    "- Only show conditions\n",
+    "- Only show drug related content\n"
+   ]
   }
  ],
  "metadata": {
